pv/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: busy-httpd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: busy-httpd.info
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: busy-httpd
                port:
                  number: 8888
